--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-rnd",
-  "version": "10.4.1",
+  "name": "creep-react-rnd",
+  "version": "13.3.7",
   "description": "",
   "title": "react-rnd",
   "main": "./lib/index.es5.js",
@@ -99,7 +99,7 @@
     "fixture": "./fixture.html"
   },
   "dependencies": {
-    "re-resizable": "6.9.6",
+    "creep-re-resizable": "^2.2.8",
     "react-draggable": "4.4.5",
     "tslib": "2.3.1"
   },
