--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "creep-react-rnd",
-  "version": "2.2.8",
+  "version": "1.1.0",
   "description": "",
   "title": "react-rnd",
   "main": "./lib/index.es5.js",
@@ -99,7 +99,7 @@
     "fixture": "./fixture.html"
   },
   "dependencies": {
-    "creep-re-resizable": "^2.2.8",
+    "creep-re-resizable": "13.3.7",
     "react-draggable": "4.4.5",
     "tslib": "2.3.1"
   },
